// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HelpText matches the snapshot by default 1`] = `
.c0 {
  color: #767676;
  margin-top: 0;
}

<p
  className="c0"
>
  Some help text.
</p>
`;

exports[`HelpText matches the snapshot when an array is provided as text 1`] = `
.c0 {
  color: #767676;
  margin-top: 0;
}

<p
  className="c0"
>
  Text 
  <a
    href="https://www.example.org"
  >
    with a link
  </a>
   in the middle.
</p>
`;
